--- a/Front/src/app/pages/engine-page/engine-page.component.html
+++ b/Front/src/app/pages/engine-page/engine-page.component.html
@@ -26,7 +26,7 @@
       <button class="btn btn-primary" (click)="renderAssetById(getRandomInt(0, collectionArray.length))">randon Preview</button>
       <button class="btn btn-primary" (click)="generateCollection()">generate Collection</button>
       <button class="btn btn-primary" (click)="cleanCategories()">clean Categories</button>
-      <input type="text" class="input-field" #projectName placeholder="Project Name">
+      <input type="text" class="input-field" [(ngModel)]="collectionName" placeholder="Project Name">
       <input type="text" class="input-field" #description placeholder="Description">
     </div>
   </div>
@@ -40,10 +40,10 @@
 
 
 
-      <button class="btn btn-primary" (click)="generateMetadata(metadata.value, projectName.value, description.value)">Generate Metadata</button>
+      <button class="btn btn-primary" (click)="generateMetadata(metadata.value, collectionName, description.value)">Generate Metadata</button>
     </div>
   </div>
   <div *ngIf="switch" class="row">
-    <img *ngFor="let asset of collectionArray" style="margin-right: 2rem;width: 400px;height: 400px" class="responsive-img" [src]="asset.src"  >
+    <img *ngFor="let asset of collectionArray" style="margin-right: 2rem;width: 400px;height: 400px" class="responsive-img" [src]="asset.image"  >
   </div>
 
